--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
-== README
+== Congress
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This application loads bills and legislators from the OpenSunlight Congress API.
+Users are able to then log in and tag bills or legislators they wish to receive
+updates on.
 
-Things you may want to cover:
+To set up this application be sure to run the rake tasks to set up the
+database.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
